--- a/Front-end/css/cadastroPage.css
+++ b/Front-end/css/cadastroPage.css
@@ -49,7 +49,7 @@ main{
     margin-left: .5rem;
 }
 #contactList{
-    box-shadow: 1px 2px 6px black;
+    box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.5);
 }
 #topContactList,.contact>div{
     display: grid;
@@ -57,13 +57,18 @@ main{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     font-size: 80%;
 }
+#topContactList>p{
+    font-size: .8rem;
+}
 #contactList>div:first-child{
     background-color: var(--primaryColor);
     font-weight: bolder;
-    height: 1.5rem;
 }
 .contact>div{
     height: 3rem;
+}
+.contact>div>p{
+    margin: 0;
 }
 .iconsField>div{
     display: grid;
@@ -87,3 +92,12 @@ footer>p>img {
 .foco>input{
     color: #006594;
 }
+
+hr{ 
+    border-width: 2px;
+  } 
+  
+  hr.divisorContato{
+    margin: 0em;
+    
+  }
